1/1.10/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timehash-svc
spec:
  type: ClusterIP
  selector:
    app: timehash
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8080
