1/1.10/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: timehash-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: timehash-svc
              servicePort: 2345
